--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
     "description": "伊吹さんと製作中のDiscord Botです。",
     "main": "main.js",
     "dependencies": {
+        "@discordjs/voice": "^0.13.0",
         "discord.js": "^14.3.0",
         "dotenv": "^16.0.2",
-        "qs": "^6.11.0"
+        "libsodium-wrappers": "^0.7.10",
+        "qs": "^6.11.0",
+        "ytdl-core": "^4.11.2"
     },
     "engines": {
         "node": "16.x"
